[package]
name = "please"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-stream = "0.3"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
futures = "0.3"
libc = "0.2"
nix = { version = "0.29", features = ["fs"] }
rand = "0.8"
regex = "1"
shellexpand = "3"
tokio = { version = "1", features = ["io-std", "fs", "rt", "macros", "io-util", "process"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
uuid = { version = "1", features = ["v4"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
